# street_gaussians_ns

./: .gitignore  pyproject.toml  render_fisheye.sh  render_myfisheye.sh
scripts/: ftheta_coeffs_example.json  nvs_template_pvb_11v.json
scripts/pythons/: generate_lidar_depth.py  smoke_test_depth_lazy_load.py
scripts/shells/: generate_lidar_depth.sh  render.sh
street_gaussians_ns/: gsplat_compat.py  sgn_config.py  sgn_pipeline.py  sgn_splatfacto.py  sgn_splatfacto_scene_graph.py
street_gaussians_ns/data/: sgn_datamanager.py  sgn_dataparser.py  sgn_dataset.py
street_gaussians_ns/data/utils/: bbox_optimizers.py  data_utils.py  dynamic_annotation.py
street_gaussians_ns/scripts/: eval.py  exporter.py  render.py
street_gaussians_ns/utils/: eval_utils.py  quaternion.py
